I think the client issues are all fixed, and server architecture is reasonable now